    * 4145 FIX: Fixed exception when setting output_format in wrong case
    * 4220 FIX: WATO folder filter: improve output of unknown folders
    * 4226 FIX: Custom inventory painters are now correctly loaded when declared with inventory_displayhints

    WATO:
    * 4142 New extended search dialog for rulesets and rules...
    * 4217 WATO rules can now be moved via drag&drop...
    * 4003 FIX: esx_vsphere_objects: fixed check parameters display bug during WATO service discovery
    * 4146 FIX: Fixed broken "Global settings" when having the Event Console disabled via "omd config"
    * 4218 FIX: Disabling replication with a site did not clear the changes for this site (1.4.0i3 regression)
    * 4221 FIX: Fixed "analyse parameters" page for services with umlauts in names
    * 4222 FIX: Services of host page: Fixed encoding issue for hosts with umlauts in alias
    * 4223 FIX: Fixed possible g_host_attribute related AttributeError exception
    * 4224 FIX: Improved exception handling during WATO slave site activation
    * 4237 FIX: Fixed rendering of old timestamps...

    Notifications:
    * 4197 FIX: Fix sending notification to global fallback email address

    BI:
    * 4202 FIX: Availability now avoids pending states for times before new hosts or services were added...
    * 4009 FIX: Business intelligence: Multihost aggregations are no longer broken after a core restart

    Reporting & Availability:
    * 3652 FIX: Unbreak PDF exports...

    Event Console:
    * 4154 Do not send notifications if host found and currently in downtime...
            NOTE: Please refer to the migration notes!
    * 4155 FIX: Do not perform actions on events if overflow limit is active...
    * 4156 FIX: Fix off-by-one error in EC limit handling...
    * 4199 FIX: Fix detection of replication mode if EC is distributed...
    * 4200 FIX: Fix computation of Event Console performance snapin in distributed mode...